[package]
name = "dice-cli"
version = "0.1.0"
authors = ["Vale Tolpegin <valetolpegin@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
reqwest = "0.11.14"
rust-sdk = { path = "../rust-sdk" }
tokio = { version = "1.25.0", features = ["full"] }
mongodb = { version = "2.3.1", default-features = false, features = ["async-std-runtime"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"